# mlops-tooling

./: .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: check-install.yaml
examples/: charts_examples.ipynb  examples.ipynb  graphing_examples.ipynb  prompt_examples.ipynb
examples/prompts/: prompt.txt
examples/sql/: example_if.sql  example_if_sample_sub.sql  example_sample.sql  example_substitution.sql
mlops_tooling/: __init__.py
mlops_tooling/bq_connector/: README.md  __init__.py  bigquery_connector.py
mlops_tooling/bq_connector/base_class/: __init__.py  base_connector.py
mlops_tooling/charts/: __init__.py  main.py
mlops_tooling/graphing/: __init__.py  main.py
mlops_tooling/kafka/: README.md  any_pb.py  any_pb2.py  errors.py  kafka_reader.py  kafka_writer.py  timestamp_pb.py  timestamp_pb2.py
mlops_tooling/logger/: main.py
mlops_tooling/model_manager/: README.md  __init__.py  main.py
mlops_tooling/prompt_manager/: __init__.py  main.py
mlops_tooling/serving/: cloudbuild.py  deployment.py  main.py
mlops_tooling/timeseries/: README.md  __init__.py  date_spine.py  forecaster.py  graph.py  intervals.py  metrics.py  timeseries.py
test/model_manager/: tensorflow_mnist.ipynb
