[tool.poetry]
name = "mlops-tooling"
version = "1.0.0"
description = "UW internal MLOps tools, packages, and functions"
authors = ["Ben Hicks <bhicks@uw.co.uk>"]
license = "MIT 2.0"
readme = "README.md"
packages = [{ include = "mlops_tooling" }]

[tool.poetry.dependencies]
python = ">=3.11, <4.0"
google-cloud-bigquery = "^3.38.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
