[project]
name = "mlops-tooling"
version = "1.0.0"
description = "UW internal tools for MLOps."
authors = [
    {name = "Ben",email = "bhicks@uw.co.uk"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "google-cloud-bigquery (>=3.38.0,<4.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "mlflow (<=3.0)",
    "plotly (>=6.5.0,<7.0.0)",
    "colorlog (>=6.10.1,<7.0.0)",
    "db-dtypes (>=1.4.4,<2.0.0)",
    "pyarrow (>=19.0.0,<20.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
